@@ -923,14 +923,16 @@ sp-zirconium-ore=Zirconium ore
 sp-zirconium-rod=Zirconium rod
 
 [mod-setting-description]
-sp-character-panel-width=Number of slots for the width of character panel
-sp-crafting-panel-width=Number of slots for the width of crafting and factoriopedia panel
-sp-logistics-panel-width=Number of slots for the width of logistics panel
+sp-character-panel-width=Number of slots for the width of character panel.
+sp-crafting-panel-width=Number of slots for the width of crafting and factoriopedia panel.
+sp-logistics-panel-width=Number of slots for the width of logistics panel.
+sp-spoiled-items=If set to true, items do spoil. Removes all freezing and thawing recipes.
 
 [mod-setting-name]
 sp-character-panel-width=Character panel width
 sp-crafting-panel-width=Crafting panel width
 sp-logistics-panel-width=Logistics inventory width
+sp-spoiled-items=Spoiled items
 
 [prefix]
 sp-frozen=Frozen
